package ub.edu.model.cataleg;

public enum ContingutType {
    ALL, Pelicula, Serie, Temporada, Episodi
}
